Removed fixed width. Messed up spacing.

--- a/module/dvs/static/css/default/default/add.css
+++ b/module/dvs/static/css/default/default/add.css
@@ -2,7 +2,6 @@
 	padding-top: .5em;
 	padding-bottom: .5em;
 	padding-right: 1em;
-	width:150px;
 }
 
 .dvs_add_td{
